--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobx-validation",
   "version": "0.2.0",
-  "description": "",
+  "description": "Validation library using Mobx observables",
   "main": "dist/index.js",
   "files": [
     "dist/**/*"
